# control-trees-contingency-planning

./: .gitignore  CMakeLists.txt  README.md  main.cpp  planning_node.cpp
assets/: control_tree_layout.json  default.yaml
assets/mesh/: walk_man_lite.glb
common/: common.hpp  control_tree.hpp
common/protos/: planning_info.proto
images/materials/: imshow.py  pedestrian_left.mat.txt  pedestrian_right.mat.txt
include/: common.hpp  utils.hpp
include/simulator/: simulator_base.hpp  simulator_jaywalking.hpp
planning/: mpc_model.cpp  mpc_model.hpp  qp_constraints.cpp  qp_constraints.hpp  qp_tree_problem_osqp.cpp  qp_tree_problem_osqp.hpp  qp_tree_solver_base.cpp  qp_tree_solver_base.hpp  qp_tree_solver_dec.cpp  qp_tree_solver_dec.hpp  qp_tree_solver_osqp.cpp  qp_tree_solver_osqp.hpp  stopline_qp_tree.cpp  stopline_qp_tree.hpp
simulator/: pedestrian.cpp  pedestrian.hpp  simulator.cpp  simulator.hpp
src/: common.cpp  contingency_planning.cpp  utils.cpp
src/simulator/: simulator_base.cpp  simulator_jaywalking.cpp
test/: foxglove_test.cpp
